<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingTop="40dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:textColor="#555555"
        android:text="@string/input_info_guide"/>

    <LinearLayout
        style="@style/user_info_ll">

        <TextView
            android:text="@string/name"
            style="@style/user_info_tv"/>


        <EditText
            android:id="@+id/input_name_et"
            style="@style/user_info_et"
            android:hint="请填入姓名" />
    </LinearLayout>

    <View
        style="@style/HorizontalLine" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:textColor="#555555"
        android:layout_marginTop="14dp"
        android:text="@string/name_guide"/>


    <LinearLayout style="@style/user_info_ll">

        <TextView
            style="@style/user_info_tv"
            android:text="@string/education" />

        <TextView
            android:id="@+id/input_education_tv"
            style="@style/user_info_right_tv"
            android:hint="请选择学历" />
    </LinearLayout>

    <View
        android:layout_marginTop="20dp"
        style="@style/HorizontalLine" />

    <LinearLayout
        style="@style/user_info_ll">
        <TextView
            android:text="@string/born_time"
            style="@style/user_info_tv"/>

        <TextView
            android:id="@+id/input_birthday_tv"
            style="@style/user_info_right_tv"
            android:hint="请选择出生日期"
            tools:text="1990年9月" />
    </LinearLayout>

    <View
        android:layout_marginTop="20dp"
        style="@style/HorizontalLine" />
    <Button
        android:id="@+id/match_btn"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="40dp"
        android:text="@string/start_match"
        style="@style/next_btn"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:textColor="#e6343d"
        android:gravity="center"
        android:layout_marginTop="12dp"
        android:text="@string/input_info_guide"/>

</LinearLayout>