<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/page_padding_top"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/input_phonenumber_et"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/input_phone_number"
        android:inputType="number"
        android:textColor="#242424"
        android:textSize="18sp"
        android:backgroundTint="#b3b3b3" />

    <ImageView
        android:id="@+id/input_phone_close_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="5dp"
        android:layout_alignRight="@id/input_phonenumber_et"
        android:layout_alignTop="@id/input_phonenumber_et"
        android:layout_marginTop="5dp"
        android:src="@drawable/ic_close"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/input_verify_code_et"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/input_phonenumber_et"
        android:layout_marginTop="20dp"
        android:hint="@string/input_verify_number"
        android:inputType="number"
        android:textColor="#242424"
        android:textSize="18sp"
        android:backgroundTint="#b3b3b3" />

    <Button
        android:id="@+id/input_verify_btn"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_alignRight="@id/input_verify_code_et"
        android:layout_alignTop="@id/input_verify_code_et"
        android:text="@string/aquire"
        android:textColor="@color/white"
        android:enabled="false"
        android:textSize="13sp"
        android:background="@drawable/bg_red_btn_selector"
        android:src="@drawable/ic_close"/>

    <Button
        android:id="@+id/login_btn"
        android:text="@string/login"
        android:enabled="false"
        android:layout_below="@id/input_verify_code_et"
        android:layout_marginTop="20dp"
        style="@style/next_btn"/>
</RelativeLayout>