<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mine_root_ll"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#e6343d"
        android:paddingTop="40dp"
        android:paddingBottom="20dp"
        android:gravity="center">

        <TextView
            android:id="@+id/mine_user_id_Tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_id"
            android:textColor="@color/white"
            android:textSize="14sp"/>

        <com.saku.lmlib.views.RoundRectFrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:roundRadius="37dp"
            android:layout_marginTop="28dp">
            <ImageView
                android:id="@+id/user_iv"
                android:layout_width="74dp"
                android:layout_height="74dp"
                android:layout_gravity="center_vertical"
                tools:src="@drawable/user_example" />
        </com.saku.lmlib.views.RoundRectFrameLayout>

        <TextView
            android:id="@+id/mine_user_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="小李子"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginTop="14dp" />

        <TextView
            android:id="@+id/mine_user_birthday_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="1990年9月18日   上海工作"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/mine_edit_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_user_info"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_white_round_line_corner"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">

        <TextView
            android:id="@+id/collection_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/ic_collection"
            android:gravity="center"
            android:text="@string/collection" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#eeeeee" />
        <TextView
            android:id="@+id/my_msg_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/ic_my_msg"
            android:gravity="center"
            android:text="@string/my_msg" />
    </LinearLayout>

    <View
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        style="@style/HorizontalLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/feedBack_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/feedback_ic"
            android:drawableRight="@drawable/right_arrow"
            android:gravity="left|center_vertical"
            android:text="@string/feedback"
            android:background="@drawable/item_selector"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/logout_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/logout"
            android:drawableRight="@drawable/right_arrow"
            android:gravity="left|center_vertical"
            android:text="@string/logout_account"
            android:background="@drawable/item_selector"/>
    </LinearLayout>
</LinearLayout>