<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="right"
    android:background="#ffffff"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/content_sv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/user_top_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="30dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:paddingTop="70dp">

                <com.saku.lmlib.views.RoundRectFrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:roundRadius="37dp">

                    <ImageView
                        android:id="@+id/opp_user_iv"
                        android:layout_width="74dp"
                        android:layout_height="74dp"
                        android:layout_gravity="center_vertical"
                        tools:src="@drawable/user_example" />
                </com.saku.lmlib.views.RoundRectFrameLayout>

                <TextView
                    android:id="@+id/opp_name_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="14dp"
                    android:textColor="#000"
                    android:textSize="17sp"
                    tools:text="小芳" />

                <TextView
                    android:id="@+id/collection_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:drawableTop="@drawable/ic_collection_unselected"
                    android:text="@string/collection"
                    android:textColor="#000" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:text="@string/basic_info"
                android:textColor="#000"
                android:textSize="14sp" />

            <View
                style="@style/HorizontalLine"
                android:layout_margin="15dp" />

            <TextView
                android:id="@+id/opp_residence_tv"
                style="@style/opp_chat_tv"
                tools:text="户籍:  湖北武汉" />

            <TextView
                android:id="@+id/opp_location_tv"
                style="@style/opp_chat_tv"
                tools:text="现居:  上海浦东新区" />

            <TextView
                android:id="@+id/opp_birthday_tv"
                style="@style/opp_chat_tv"
                tools:text="生日:  1990年4月7日" />

            <TextView
                android:id="@+id/opp_education_tv"
                style="@style/opp_chat_tv"
                tools:text="学历:  研究生" />

            <TextView
                android:id="@+id/opp_fieldwork_tv"
                style="@style/opp_chat_tv"
                tools:text="行业:  金融" />

            <TextView
                android:id="@+id/opp_occupation_tv"
                style="@style/opp_chat_tv"
                tools:text="职业:  产品总监" />

            <TextView
                android:id="@+id/opp_salary_tv"
                style="@style/opp_chat_tv"
                tools:text="薪资:  25000元" />

            <TextView
                android:id="@+id/view_more_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_more"
                android:padding="10dp"
                android:layout_gravity="center_horizontal"
                android:textSize="14sp"
                android:textColor="#555"
                android:drawableRight="@drawable/arrow_down"
                android:drawablePadding="5dp"/>
            <ViewStub
                android:id="@+id/more_info_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout="@layout/s_opp_info_more_layout" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/chat_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/btn_red_selector"
        android:gravity="center"
        android:text="@string/chitchat"
        android:textColor="@color/white"
        android:textSize="13sp" />
</LinearLayout>